Fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -62,17 +62,18 @@ body {
 
 
 .imgBox  { 
-  width:72px; 
-  height:367px; 
+  width:58px; 
+  height: 293px; 
+  background-size:58px 293px;
   background-image:url('../perlick.png'); 
   display: inline-block;
-  margin: 20px;
+  /*margin: 20px;*/
   /*background-repeat: no-repeat;*/
 }
 .imgText { 
   text-align:center; 
   /*margin:0; */
-  padding:50px 50px 50px 0; 
+  padding:40px 40px 40px 0; 
   /*border:0px solid red;*/
   writing-mode:tb-rl;
   -webkit-transform:rotate(90deg);
